--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "nvm": "source ~/.nvm/nvm.sh && nvm use 8.4.0",
     "start": "nodemon index.js",
-    "pm2": "pm2 start ./process.json"
+    "pm2": "pm2 start ./process.json",
+    "local": "cross-env LOCAL=local yarn start"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -19,6 +20,7 @@
   },
   "dependencies": {
     "bluebird": "^3.5.0",
+    "cross-env": "^5.1.1",
     "github-webhook-handler": "^0.6.0",
     "hiredis": "^0.5.0",
     "jsonwebtoken": "^8.0.0",
