--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nodemon": "^1.12.0"
   },
   "dependencies": {
+    "@alicloud/sms-sdk": "^1.0.2",
     "bluebird": "^3.5.0",
     "cross-env": "^5.1.1",
     "github-webhook-handler": "^0.6.0",
