--- a/package.json
+++ b/package.json
@@ -24,12 +24,14 @@
     "cross-env": "^5.1.1",
     "github-webhook-handler": "^0.6.0",
     "hiredis": "^0.5.0",
+    "joi": "^13.0.1",
     "jsonwebtoken": "^8.0.0",
     "koa": "^2.3.0",
     "koa-bodyparser": "^4.2.0",
     "koa-helmet": "^3.2.0",
     "koa-jwt": "^3.2.2",
     "koa-router": "^7.2.1",
+    "koa-validate": "^1.0.7",
     "koa2-cors": "^2.0.3",
     "moment": "^2.18.1",
     "mongoose": "^4.11.10",
