--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
   },
   "dependencies": {
     "@alicloud/sms-sdk": "^1.0.2",
+    "apollo-server-koa": "^1.3.2",
     "bluebird": "^3.5.0",
     "cross-env": "^5.1.1",
     "github-webhook-handler": "^0.6.0",
+    "graphql": "^0.12.3",
+    "graphql-tools": "^2.20.0",
     "hiredis": "^0.5.0",
     "joi": "^13.0.1",
     "jsonwebtoken": "^8.0.0",
