--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "koa-helmet": "^3.2.0",
     "koa-jwt": "^3.2.2",
     "koa-router": "^7.2.1",
+    "koa-static": "^4.0.2",
     "koa-validate": "^1.0.7",
     "koa2-cors": "^2.0.3",
     "moment": "^2.18.1",
