--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "apollo-server-koa": "^1.3.2",
     "bluebird": "^3.5.0",
     "cross-env": "^5.1.1",
+    "dataloader": "^1.4.0",
     "github-webhook-handler": "^0.6.0",
     "graphql": "^0.12.3",
     "graphql-tools": "^2.20.0",
