--- a/package.json
+++ b/package.json
@@ -7,43 +7,41 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.26.0",
-    "eslint": "^4.6.1",
-    "eslint-config-airbnb-base": "^12.0.0",
-    "eslint-plugin-import": "^2.7.0",
-    "nodemon": "^1.12.0"
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "nodemon": "^1.17.3"
   },
   "dependencies": {
-    "@alicloud/sms-sdk": "^1.0.2",
-    "apollo-server-koa": "^1.3.2",
-    "bluebird": "^3.5.0",
-    "cross-env": "^5.1.1",
+    "@alicloud/sms-sdk": "^1.0.9",
+    "apollo-server-koa": "^1.3.4",
+    "bluebird": "^3.5.1",
+    "cheerio": "^1.0.0-rc.2",
     "dataloader": "^1.4.0",
-    "github-webhook-handler": "^0.6.0",
-    "graphql": "^0.12.3",
-    "graphql-tools": "^2.20.0",
-    "hiredis": "^0.5.0",
-    "joi": "^13.0.1",
-    "jsonwebtoken": "^8.0.0",
-    "koa": "^2.3.0",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^2.24.0",
+    "joi": "^13.1.2",
+    "jsonwebtoken": "^8.2.1",
+    "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
-    "koa-helmet": "^3.2.0",
-    "koa-jwt": "^3.2.2",
-    "koa-router": "^7.2.1",
+    "koa-helmet": "^4.0.0",
+    "koa-jwt": "^3.3.1",
+    "koa-router": "^7.4.0",
     "koa-static": "^4.0.2",
     "koa-validate": "^1.0.7",
-    "koa2-cors": "^2.0.3",
+    "koa2-cors": "^2.0.5",
     "lodash": "^4.17.5",
-    "moment": "^2.18.1",
-    "mongoose": "^4.11.10",
-    "node-fetch": "^1.7.3",
-    "qiniu": "^7.1.0",
-    "query-string": "^5.0.1",
-    "redis": "^2.8.0"
+    "moment": "^2.22.0",
+    "mongoose": "^5.0.14",
+    "node-fetch": "^2.1.2",
+    "qiniu": "^7.1.3",
+    "query-string": "^6.0.0",
+    "redis": "^2.8.0",
+    "showapi-sdk": "^1.0.4"
   }
 }
