--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@alicloud/sms-sdk": "^1.1.1",
+    "apollo-errors": "^1.9.0",
     "apollo-server-koa": "^1.3.6",
     "bluebird": "^3.5.1",
     "cheerio": "^1.0.0-rc.2",
