--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apollo-server-koa": "^2.1.0",
     "bluebird": "^3.5.2",
     "cheerio": "^1.0.0-rc.2",
+    "cron": "^1.7.0",
     "dataloader": "^1.4.0",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.3.0",
