--- a/.eslintrc
+++ b/.eslintrc
@@ -27,7 +27,8 @@
     "camelcase": [0],
     "no-console": [0],
     "indent": [2],
-    "semi": [2]
+    "semi": [2],
+    "max-len": [0]
   },
   "parserOptions": {
     "ecmaFeatures": {
