--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "mongoose": "^5.3.7",
     "node-fetch": "^2.2.0",
     "node-xlsx": "^0.12.1",
+    "nodemailer": "^6.3.0",
     "qiniu": "^7.2.1",
     "query-string": "^6.2.0",
     "redis": "^2.8.0",
