--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@alicloud/sms-sdk": "^1.1.6",
+    "algoliasearch": "^3.35.1",
     "apollo-server": "^2.1.0",
     "apollo-server-koa": "^2.1.0",
     "bluebird": "^3.5.2",
